Add database connection management and schema for J-Scheduler
- Implemented DatabaseConnection singleton class for managing MariaDB connections.
- Added database.properties for configurable database settings.
- Created schema.sql for courses and assignments tables with relationships and indexing.
- Introduced AssignmentDialogController class for UI handling of assignments.

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    // MariaDB JDBC Driver
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
+}
+
 java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
