--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,27 @@
+### Gradle ###
+.gradle/
+**/build/
+!src/**/build/
+
+# Gradle Wrapper
+# Comment the next line if you want to commit the wrapper jar
+# gradle-wrapper.jar
+
+# Gradle cache
+.gradle-cache/
+
+# Gradle daemon
+.gradle.properties
+
 ### IntelliJ IDEA ###
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 .kotlin
+.idea/
+*.iml
+*.iws
+*.ipr
 
 ### Eclipse ###
 .apt_generated
@@ -28,3 +47,25 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Java ###
+*.class
+*.log
+*.ctxt
+.mtj.tmp/
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+hs_err_pid*
+replay_pid*
+
+### Application ###
+# Application-specific temp files
+logs/
+*.log.*
+temp/
+tmp/
